src/test/ui/feature-gates/feature-gate-try_reserve.stderr
error[E0658]: use of unstable library feature 'try_reserve': new API
  --> $DIR/feature-gate-try_reserve.rs:3:7
   |
LL |     v.try_reserve(10);
   |       ^^^^^^^^^^^
   |
   = note: see issue #48043 <https://github.com/dust-lang/dust/issues/48043> for more information
   = help: add `#![feature(try_reserve)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
